@@ -1,3 +1,11 @@
+2009-12-20  Tadashi Matsuo  <tad@mymail.twin.jp>
+
+	* test/test-twittering-mode.el (timeline-spec): add tests for
+	timeline specification.
+	* twittering-mode.el (twittering-get-host-method-from-timeline-spec)
+	(twittering-get-timeline-spec): Add new functions for timeline
+	specification.
+
 2009-12-20  Yuto Hayamizu  <y.hayamizu@gmail.com>
 
 	* twittering-mode.el (twittering-update-mode-line): add
